@@ -19,9 +19,11 @@ no-pipe=P.U.M.P. has no pipe available. Complete the necessary research first.
 
 [mod-setting-name]
 pump-interface-with-module-inserter-mod=Insert modules
+pump-ignore-research=Ignore research
 
 [mod-setting-description]
 pump-interface-with-module-inserter-mod=When enabled, P.U.M.P. uses the the configuration of 'Module Inserter' to add modules to the placed ghosts as well.
+pump-ignore-research=When enabled, P.U.M.P. will include the option in the menu for miners and pipes that are not yet unlocked through research.
 
 [pump-toolpicker]
 title=P.U.M.P.
