@@ -89,4 +89,5 @@ Date: 2021-01-21
 Version: 1.1.0
 Date: ??
   Features:    
-    - Check research requirements for extractors and pipes
+    - Check research requirements for extractors and pipes before offering them in the selection menu.
+    - Added setting to ignore the research requirements for extractors and pipes
